# Unofficial-Scrabble-Library

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  output.txt  scl.h
BoardReader/: BoardReader.cpp  BoardReader.h
CADS/: CADS.cpp  CADS.h
Data/: Board.csv  console.txt  perk_board.csv  scrabble_word_list.txt  words_length_sub_7.txt
HandManager/: HandManager.cpp  HandManager.h
HorizontalBoardReader/: HorizontalBoardReader.cpp  HorizontalBoardReader.h
HorizontalScrabbleVectorizer/: HorizontalScrabbleVectorizer.cpp  HorizontalScrabbleVectorizer.h
LString/: LString.cpp  LString.h
Letter/: Letter.cpp  Letter.h
RackMap/: RMAC.cpp  RMAC.h  RackMap.cpp  RackMap.h
ScrabbleDataset/: ScrabbleDataset.cpp  ScrabbleDataset.h
ScrabbleReader/: ScrabbleReader.cpp  ScrabbleReader.h
ScrabbleVectorizer/: ScrabbleVectorizer.cpp  ScrabbleVectorizer.h
TString/: TString.cpp  TString.h  Tile.cpp  Tile.h
Test_Folder/: catch.hpp  scrabble_word_list.txt  tests.cpp
Tstring/: TString.cpp  Tile.cpp  Tile.h  Tstring.h
Utils/CADS/: CADS.cpp  CADS.h
Utils/HorizontalScrabbleVectorizer/: HorizontalScrabbleVectorizer.cpp  HorizontalScrabbleVectorizer.h
Utils/RMAC/: RMAC.cpp  RMAC.h
Utils/ScrabbleString/: ScrabbleString.cpp  ScrabbleString.h  Tile.cpp  Tile.h
Utils/ScrabbleVectorizer/: ScrabbleVectorizer.cpp  ScrabbleVectorizer.h
Utils/Tstring/: TString.cpp  Tile.cpp  Tile.h  Tstring.cpp  Tstring.h
Utils/VerticalScrabbleVectorizer/: VerticalScrabbleVectorizer.cpp  VerticalScrabbleVectorizer.h
VerticalBoardReader/: VerticalBoardReader.cpp  VerticalBoardReader.h
VerticalScrabbleVectorizer/: VerticalScrabbleVectorizer.cpp  VerticalScrabbleVectorizer.h
